--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
       margin: 0 auto;
     }
 
+    .auth-content {
+      padding: 2rem;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
     .card {
       background: rgba(255, 255, 255, 0.95);
       border-radius: 16px;
@@ -354,6 +363,12 @@
 
     @media (max-width: 768px) {
       .main-content {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        padding: 1rem;
+      }
+
+      .auth-content {
         grid-template-columns: 1fr;
         gap: 1rem;
         padding: 1rem;
@@ -1137,30 +1152,6 @@
       color: #757575;
     }
 
-    /* Auth Screen Styles */
-    .auth-screen {
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 16px;
-      padding: 32px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-    }
-
-    .auth-screen h2 {
-      font-size: 28px;
-      font-weight: 700;
-      color: #ffffff;
-      text-align: center;
-      margin: 0 0 24px 0;
-      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-    }
-
-    #authTitle {
-      color: #2c3e50 !important;
-      text-shadow: 0 2px 4px rgba(255, 255, 255, 0.3) !important;
-    }
-
     .login-benefits {
       margin-bottom: 25px;
       padding: 20px;
@@ -1273,70 +1264,6 @@
 
     .auth-switch button:hover {
       color: #45a049;
-    }
-
-    .guest-btn {
-      padding: 12px 24px;
-      font-size: 14px;
-      background: #ffffff;
-      color: #424242;
-      border: 2px solid #e0e0e0;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 15px;
-      transition: all 0.2s ease;
-      font-weight: 500;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
-
-    .guest-btn:hover {
-      background: #f5f5f5;
-      border-color: #bdbdbd;
-    }
-
-    /* User Info Styles */
-    .user-info {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      padding: 12px 20px;
-      background: rgba(255, 255, 255, 0.95);
-      border: 2px solid #e0e0e0;
-      border-radius: 25px;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(10px);
-      z-index: 1000;
-    }
-
-    .user-info span {
-      color: #1a1a1a;
-      font-weight: 600;
-      font-size: 14px;
-      letter-spacing: 1px;
-    }
-
-    .logout-btn {
-      padding: 8px 16px;
-      font-size: 14px;
-      font-weight: 600;
-      background: #f44336;
-      color: #ffffff;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
-
-    .logout-btn:hover {
-      background: #d32f2f;
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(244, 67, 54, 0.4);
     }
 
     /* Winning Screen Styles */
@@ -1637,18 +1564,14 @@
       <div class="logo">
         🚀 Blitz Ball
       </div>
-      <div class="user-info" style="display: none;">
-        <span class="welcome-text" id="userDisplay">Welcome, Player!</span>
-        <button class="logout-btn" id="logoutBtn">LOGOUT</button>
-      </div>
     </header>
 
-    <main class="main-content" style="grid-template-columns: 1fr 1fr; max-width: 1000px;">
+    <main class="auth-content">
       <!-- Auth Card -->
       <div class="card">
         <div class="card-header">
           <span class="card-icon">🔐</span>
-          Authentication
+          <span id="authTitle">Welcome Back</span>
         </div>
 
         <div class="login-benefits">
