--- a/index.html
+++ b/index.html
@@ -179,50 +179,70 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1rem;
-      background: #f8f9fa;
+      padding: 1.25rem;
+      background: #ffffff;
       border-radius: 12px;
-      margin-bottom: 0.75rem;
-      border: 2px solid transparent;
+      margin-bottom: 1rem;
+      border: 2px solid #e9ecef;
       transition: all 0.3s ease;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     }
 
     .lobby-item:hover {
       border-color: #28a745;
-      background: #e8f5e8;
+      box-shadow: 0 4px 16px rgba(40, 167, 69, 0.15);
+      transform: translateY(-1px);
     }
 
     .lobby-info {
       display: flex;
       flex-direction: column;
       gap: 0.25rem;
+      justify-content: center;
     }
 
     .lobby-name {
-      font-weight: 600;
+      font-weight: 700;
       color: #2c3e50;
-      font-size: 1.1rem;
+      font-size: 1.3rem;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      margin-bottom: 0;
     }
 
     .lobby-players {
       color: #6c757d;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
+      font-weight: 500;
     }
 
     .join-btn {
-      background: #007bff;
+      background: #4285f4;
       color: white;
       border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
-      font-weight: 500;
+      padding: 0.75rem 1.5rem;
+      border-radius: 8px;
+      font-weight: 600;
+      font-size: 0.9rem;
       cursor: pointer;
       transition: all 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      min-width: 80px;
     }
 
     .join-btn:hover {
-      background: #0056b3;
+      background: #3367d6;
       transform: translateY(-1px);
+      box-shadow: 0 4px 12px rgba(66, 133, 244, 0.3);
+    }
+
+    .join-btn:disabled {
+      background: #e0e0e0;
+      color: #9e9e9e;
+      cursor: not-allowed;
+      transform: none;
+      box-shadow: none;
     }
 
     .player-item {
@@ -765,7 +785,6 @@
     }
 
     .lobby-info {
-      margin-top: 20px;
       color: rgba(255, 255, 255, 0.8);
       font-size: 16px;
       font-weight: 400;
@@ -908,26 +927,29 @@
     .lobby-item {
       display: flex;
       justify-content: space-between;
-      align-items: flex-start;
-      padding: 16px 20px;
-      margin-bottom: 12px;
-      background: rgba(255, 255, 255, 0.8);
-      border: 2px solid #e0e0e0;
-      border-radius: 8px;
+      align-items: center;
+      padding: 1.25rem;
+      margin-bottom: 1rem;
+      background: #ffffff;
+      border: 2px solid #e9ecef;
+      border-radius: 12px;
       cursor: pointer;
-      transition: all 0.2s ease;
-      min-height: 60px;
+      transition: all 0.3s ease;
+      min-height: 70px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     }
 
     .lobby-item:hover {
-      border-color: #2196f3;
-      box-shadow: 0 2px 8px rgba(33, 150, 243, 0.2);
+      border-color: #28a745;
+      box-shadow: 0 4px 16px rgba(40, 167, 69, 0.15);
+      transform: translateY(-1px);
     }
 
     .lobby-item.full {
       opacity: 0.6;
       cursor: not-allowed;
       border-color: #f44336;
+      transform: none;
     }
 
     .lobby-main-info {
