--- a/index.html
+++ b/index.html
@@ -402,32 +402,45 @@
     }
 
     canvas {
-      border: 3px solid #2c3e50;
-      background:
-        linear-gradient(135deg, #27ae60 0%, #2ecc71 50%, #58d68d 100%);
-      box-shadow:
-        0 8px 32px rgba(0, 0, 0, 0.15),
-        inset 0 0 30px rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      background: linear-gradient(135deg, #27ae60 0%, #2ecc71 50%, #58d68d 100%);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       display: block;
       margin: 0 auto;
-      border-radius: 8px;
+      border-radius: 16px;
       position: relative;
+      backdrop-filter: blur(10px);
     }
 
     .controls {
       text-align: center;
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 16px;
+      padding: 1.5rem;
+      margin: 2rem auto;
+      max-width: 600px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      transition: all 0.3s ease;
+    }
+
+    .controls:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
     }
 
     .boost-bar {
       width: 350px;
       height: 24px;
-      border: 2px solid #2196f3;
-      background: linear-gradient(90deg, #e3f2fd, #bbdefb);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.95);
       margin: 10px auto;
       position: relative;
       border-radius: 12px;
       overflow: hidden;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(10px);
     }
 
     .boost-fill {
@@ -1044,21 +1057,25 @@
     }
 
     .back-btn {
-      padding: 12px 24px;
-      font-size: 14px;
-      background: #ffffff;
-      color: #424242;
-      border: 2px solid #e0e0e0;
-      border-radius: 6px;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      font-weight: 600;
+      background: linear-gradient(135deg, #e74c3c, #c0392b);
+      color: white;
+      border: none;
+      border-radius: 25px;
       cursor: pointer;
       margin-top: 15px;
-      transition: all 0.2s ease;
-      font-weight: 500;
+      transition: all 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      box-shadow: 0 4px 15px rgba(231, 76, 60, 0.3);
     }
 
     .back-btn:hover {
-      background: #f5f5f5;
-      border-color: #bdbdbd;
+      background: linear-gradient(135deg, #c0392b, #a93226);
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(231, 76, 60, 0.4);
     }
 
     .lobby-info {
@@ -1756,6 +1773,7 @@
       canvas {
         max-width: 100%;
         height: auto;
+        border-radius: 12px;
       }
 
       .boost-bar {
@@ -1767,11 +1785,17 @@
         flex-direction: column;
         gap: 15px;
         padding: 20px;
+        margin-bottom: 1rem;
       }
 
       .score-separator {
         transform: rotate(90deg);
         margin: 10px 0;
+      }
+
+      .controls {
+        margin: 1rem auto;
+        padding: 1rem;
       }
 
       .winning-screen {
@@ -1800,6 +1824,10 @@
       .control-btn {
         width: 100%;
         max-width: 300px;
+      }
+
+      #gameScreen main {
+        padding: 1rem !important;
       }
     }
 
@@ -2110,31 +2138,47 @@
   </div>
 
   <!-- Game Screen -->
-  <div id="gameScreen" class="screen" style="display: none;">
-    <div class="score-display">
-      <div class="score-item">
-        <span class="score-label" id="leftTeamLabel">Red</span>
-        <span class="score-value" id="leftTeamScore">0</span>
+  <div id="gameScreen" class="screen"
+    style="display: none; background: linear-gradient(135deg, #2d5016 0%, #4a7c1e 50%, #2d5016 100%); min-height: 100vh;">
+    <header class="header">
+      <div class="logo">
+        🚀 Blitz Ball
       </div>
-      <div class="score-separator">-</div>
-      <div class="score-item">
-        <span class="score-label" id="rightTeamLabel">Blue</span>
-        <span class="score-value" id="rightTeamScore">0</span>
+      <div class="user-info" id="userInfoGame" style="display: none;">
+        <span class="welcome-text" id="userDisplayGame">Welcome, Player!</span>
       </div>
-    </div>
+    </header>
 
-    <canvas id="gameCanvas" width="700" height="400"></canvas>
+    <main style="padding: 2rem; max-width: 1200px; margin: 0 auto;">
+      <div class="score-display">
+        <div class="score-item">
+          <span class="score-label" id="leftTeamLabel">Red</span>
+          <span class="score-value" id="leftTeamScore">0</span>
+        </div>
+        <div class="score-separator">-</div>
+        <div class="score-item">
+          <span class="score-label" id="rightTeamLabel">Blue</span>
+          <span class="score-value" id="rightTeamScore">0</span>
+        </div>
+      </div>
 
-    <div class="boost-bar">
-      <div class="boost-fill" id="boostFill"></div>
-      <div class="boost-text" id="boostText">100%</div>
-    </div>
+      <canvas id="gameCanvas" width="700" height="400"></canvas>
 
-    <div class="controls">
-      <p><strong>Controls:</strong></p>
-      <p>WASD - Move | SHIFT - Boost | SPACE - Hit Ball</p>
-      <button id="backToLobbyBtn" class="back-btn">👑 Return All to Lobby</button>
-    </div>
+      <div class="boost-bar">
+        <div class="boost-fill" id="boostFill"></div>
+        <div class="boost-text" id="boostText">100%</div>
+      </div>
+
+      <div class="controls">
+        <div class="card-header" style="margin-bottom: 1rem;">
+          <span class="card-icon">🎮</span>
+          Game Controls
+        </div>
+        <p style="margin-bottom: 0.5rem; font-weight: 500; color: #2c3e50;"><strong>Controls:</strong></p>
+        <p style="margin-bottom: 1.5rem; color: #6c757d;">WASD - Move | SHIFT - Boost | SPACE - Hit Ball</p>
+        <button id="backToLobbyBtn" class="back-btn">👑 Return All to Lobby</button>
+      </div>
+    </main>
   </div>
 
   <!-- Winning Screen -->
